--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,10 +3,33 @@
 {% block title %} {{ super() }} - Main {% endblock %}
 
 {% block content %}
-<h1>APLICATIVO DE CAFÉ</h1>
-{% if user %}
-<p>Bem-vindo ao APLICATIVO DE CAFÉ, {{ user }}!</p>
-{% else %}
-<p>Bem-vindo ao APLICATIVO DE CAFÉ!</p>
-{% endif %}
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2">Larry the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
 {% endblock %}
