Configurações base Nav-bar

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,28 +14,30 @@
 
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #B4FF8A;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">APP DO CAFÉ</a>
+        <a class="navbar-brand nav-item" href="index">APP DO CAFÉ</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
+          <a class="nav-link active" aria-current="page" href="index">Home</a>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about">Sobre</a>
+              <a class="nav-link" href="anuncios">Anúncios</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
+                Informações sobre café
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="infocafe/arabica_ruim">Arábica ruim</a></li>
+                <li><a class="dropdown-item" href="infocafe/arabica_boa">Arábica boa</a></li>
+                <li><a class="dropdown-item" href="infocafe/conillon">Conillon</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="infocafe/geral">Geral</a></li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sobreAPI">Nossa API</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -55,4 +57,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
   </body>
-</html>
+</html>s
