--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,7 +1,35 @@
 {% extends 'base.html' %}
 
-{% block title %} {{ super() }} - About {% endblock %}
+{% block title %} {{ super() }} - Main {% endblock %}
 
 {% block content %}
-<h1>OLA APP DO CAFE</h1>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2">Larry the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
 {% endblock %}
