--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,10 @@
 
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #B4FF8A;">
     <div class="container-fluid">
-      <a class="navbar-brand nav-item" href="index">APP DO CAFÉ</a>
+      <a class="navbar-brand nav-item" href="index">
+        <img src="https://images.vexels.com/media/users/3/185520/isolated/preview/aae89bde5310bbc00a8f077465bfb22f-grao-de-cafe-marrom.png" width="40" height="40" class="rounded-circle">
+        <t>APP DO CAFÉ</t>
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         <a class="nav-link active" aria-current="page" href="index">Home</a>
