--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="anuncios">Anúncios</a>
+            <a class="nav-link" href="announces">Anúncios</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -41,9 +41,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="sobreAPI">Nossa API</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
         <ul class="navbar-nav mb-lg-0">
