--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,68 +1,88 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    <title>{% block title %} Café {% endblock %}</title>
-  </head>
-  <body>
+  <title>{% block title %} Café {% endblock %}</title>
+</head>
+<body>
 
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #B4FF8A;">
-    <div class="container-fluid">
-      <a class="navbar-brand nav-item" href="index">
-        <img src="https://images.vexels.com/media/users/3/185520/isolated/preview/aae89bde5310bbc00a8f077465bfb22f-grao-de-cafe-marrom.png" width="40" height="40" class="rounded-circle">
-        <t>APP DO CAFÉ</t>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        <a class="nav-link active" aria-current="page" href="index">Home</a>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="announces">Anúncios</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Informações sobre café
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="infocafe/arabica_ruim">Arábica ruim</a></li>
-              <li><a class="dropdown-item" href="infocafe/arabica_boa">Arábica boa</a></li>
-              <li><a class="dropdown-item" href="infocafe/conillon">Conillon</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="infocafe/geral">Geral</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="sobreAPI">Nossa API</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg" width="40" height="40" class="rounded-circle">
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown2">
-              <li><a class="dropdown-item" href="#">Dashboard</a></li>
-              <li><a class="dropdown-item" href="#">Edit Profile</a></li>
-              <li><a class="dropdown-item" href="#">Log Out</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #B4FF8A;">
+  <div class="container-fluid">
+    <a class="navbar-brand nav-item" href="index">
+      <img src="https://images.vexels.com/media/users/3/185520/isolated/preview/aae89bde5310bbc00a8f077465bfb22f-grao-de-cafe-marrom.png" width="40" height="40" class="rounded-circle">
+      <t>APP DO CAFÉ</t>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      <a class="nav-link active" aria-current="page" href="index">Home</a>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="announces">Anúncios</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Informações sobre café
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="infocafe/arabica_ruim">Arábica ruim</a></li>
+            <li><a class="dropdown-item" href="infocafe/arabica_boa">Arábica boa</a></li>
+            <li><a class="dropdown-item" href="infocafe/conillon">Conillon</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="infocafe/geral">Geral</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="sobreAPI">Nossa API</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav mb-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg" width="40" height="40" class="rounded-circle">
+          </a>
+          {% if current_user.is_authenticated %}
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown2">
+            <li><a class="dropdown-item" href="#">Dashboard</a></li>
+            <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+            <li><a class="dropdown-item" href="logout">Log Out</a></li>
+          </ul>
+          {% else %}
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown2">
+            <li><a class="dropdown-item" href="login">Login</a></li>
+            <li><a class="dropdown-item" href=#>Registre-se</a></li>
+          </ul>
+          {% endif %}
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
-    {% block content %}
-    {% endblock %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<div class="alert alert-warning">
+  <ul class=flashes>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+  </ul>
+</div>
+{% endif %}
+{% endwith %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+{% block content %}
+{% endblock %}
 
-  </body>
-</html>s
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+
+</body>
+</html>
