--- a/app/templates/index_anonymous.html
+++ b/app/templates/index_anonymous.html
@@ -3,15 +3,15 @@
 {% block title %} {{ super() }} - About {% endblock %}
 
 {% block content %}
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="margin-bottom: 4rem;">
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel" style="height: 100%;">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
     </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active" style="height: 65rem;">
+    <div class="carousel-inner" style="height: 100%;">
+        <div class="carousel-item active" style="height: 100%;">
             <img class="bd-placeholder-img" style="object-fit: cover; object-position: 5px 20%;" width="100%" height="100%" src="https://images8.alphacoders.com/902/902013.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></img>
 
             <div class="container">
