--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,7 @@
           <a class="nav-link" href="sobreAPI">Nossa API</a>
         </li>
       </ul>
-      <ul class="nav mb-lg-0">
+      <ul class="nav mb-lg-0 justify-content-center">
         {% if current_user.is_authenticated %}
         <li class="nav-item dropdown">
           <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
