--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,9 @@
   <title>{% block title %} Café {% endblock %}</title>
 </head>
 <body>
-
+<style>
+html, body { height: 100%; margin: 0; }
+</style>
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #B4FF8A; font-size: 15px !important;">
   <div class="container-fluid">
     <a class="navbar-brand nav-item" href="/">
@@ -67,24 +69,24 @@
     </div>
   </div>
 </nav>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-<div class="alert alert-warning" style="margin-bottom: 0;">
+<div class="container", style="position: absolute; z-index: 5; left: 10px; right: 10px; margin-left: auto; margin-right: auto; width: auto; padding: 0; margin-top: 5px">
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
 
-  {% for message in messages %}
-  <a>{{ message }}</a>
-  {% endfor %}
+  {% for category, message in messages %}
+  <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+    <span>{{ message }}</span>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+{% endfor %}
 
-</div>
 {% endif %}
 {% endwith %}
-
+</div>
 {% block content %}
 {% endblock %}
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
 </body>
 </html>
