--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %} {{ super() }} - Login {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="position: relative;">
  <div class="row justify-content-center">
   <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
 <form action="" method="POST">
