Gráficos genéricos para os 3 tipos de café

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,50 +22,52 @@ html, body { height: 100%; margin: 0; }
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-      <a class="nav-link active" aria-current="page" href="index">Home</a>
+      <a class="nav-link active" aria-current="page" href="/index">Home</a>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="announces">Anúncios</a>
+          <a class="nav-link" href="/announces">Anúncios</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Informações sobre café
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="infocafe/arabica_ruim">Arábica ruim</a></li>
-            <li><a class="dropdown-item" href="infocafe/arabica_boa">Arábica boa</a></li>
-            <li><a class="dropdown-item" href="infocafe/conillon">Conillon</a></li>
+            <li><a class="dropdown-item" href="/infocafe/arabica_ruim">Arábica ruim</a></li>
+            <li><a class="dropdown-item" href="/infocafe/arabica_bom">Arábica boa</a></li>
+            <li><a class="dropdown-item" href="/infocafe/conillon">Conillon</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="infocafe/geral">Geral</a></li>
+            <li><a class="dropdown-item" href="/infocafe/geral">Geral</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="sobreAPI">Nossa API</a>
+          <a class="nav-link" href="/sobreAPI">Nossa API</a>
         </li>
       </ul>
-      <ul class="nav mb-lg-0 justify-content-center">
         {% if current_user.is_authenticated %}
+        <ul class="nav mb-lg-0 justify-content-xxl-start">
         <li class="nav-item dropdown">
           <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="https://s3.eu-central-1.amazonaws.com/bootstrapbaymisc/blog/24_days_bootstrap/fox.jpg" width="40" height="40" class="rounded-circle">
           </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown2">
+          <ul class="dropdown-menu dropdown-menu-sm-end" aria-labelledby="navbarDropdown2">
           <li><a class="dropdown-item" href="#">Dashboard</a></li>
           <li><a class="dropdown-item" href="#">Edit Profile</a></li>
-          <li><a class="dropdown-item" href="logout">Log Out</a></li>
+          <li><a class="dropdown-item" href="/logout">Log Out</a></li>
           </ul>
         </li>
+        </ul>
         {% else %}
+        <ul class="nav mb-lg-0 justify-content-center">
         <li class="nav-item">
-          <a class="nav-link" href="login">Login</a>
+          <a class="nav-link" href="/login">Login</a>
         </li>
         <li>
           <a type="button" class="btn btn-primary btn-lg" href="register">Registre-se</a>
         </li>
+        </ul>
         {% endif %}
-      </ul>
     </div>
   </div>
 </nav>
