--- a/app/templates/announces.html
+++ b/app/templates/announces.html
@@ -3,33 +3,42 @@
 {% block title %} {{ super() }} - Main {% endblock %}
 
 {% block content %}
-<table class="table">
+<table class="table table-striped table-sm ">
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Usuario</th>
+      <th scope="col">Tipo Café</th>
+      <th scope="col">Tipo Anuncio</th>
+      <th scope="col">Quantidade Sacas</th>
+      <th scope="col">Data</th>
+      <th scope="col">Cidade</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td>Sit</td>
+      <td>Amet</td>
+      <td>Consectetur</td>
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
+      <td>Adipisicing</td>
+      <td>Elit</td>
+      <td>Sint</td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td colspan="2">Larry the Bird</td>
-      <td>@twitter</td>
+      <td>Hic</td>
+      <td>Fugiat</td>
+      <td>Temporibus</td>
     </tr>
   </tbody>
+
+  <caption>
+    Captions of the table
+  </caption>
+
 </table>
 {% endblock %}
