Criar anuncio e mostrar na tabela (v1)

--- a/app/templates/create_annouce.html
+++ b/app/templates/create_annouce.html
@@ -11,40 +11,36 @@
  <div class="row justify-content-center">
   <div class="col-xl-6 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
 <form action="" method="POST">
-  <div class="form-group row">
-    <label for="tipo_cafe" class="col-4 col-form-label">Tipo de Café</label>
-    <div class="col-8">
-      <select id="tipo_cafe" name="tipo_cafe" required="required" class="custom-select">
-        <option value="">Arábica Boa</option>
-        <option value="">Arábica Ruim</option>
-        <option value="">Conillon</option>
-      </select>
+    {{form.csrf_token}}
+    <div class="form-group row">
+        <label class="col-4 col-form-label">Tipo de Café</label>
+        <div class="col-8">
+            {{form.coffe_type(class="form-control")}}
+        </div>
     </div>
-  </div>
-  <div class="form-group row">
-    <label for="qtd_sacas" class="col-4 col-form-label">Quantidade de Sacas</label>
-    <div class="col-8">
-      <input id="qtd_sacas" name="qtd_sacas" placeholder="0...inf" type="number" required="required" class="form-control">
+    <div class="form-group row">
+        <label class="col-4 col-form-label">Quantidade Sacas</label>
+        <div class="col-8">
+            {{form.amount(class="form-control")}}
+        </div>
     </div>
-  </div>
-  <div class="form-group row">
-    <label class="col-4">Tipo de Anuncio</label>
-    <div class="col-8">
-      <div class="custom-control custom-radio custom-control-inline">
-        <input name="radio" id="radio_0" type="radio" required="required" class="custom-control-input" value="">
-        <label for="radio_0" class="custom-control-label">Venda</label>
-      </div>
-      <div class="custom-control custom-radio custom-control-inline">
-        <input name="radio" id="radio_1" type="radio" required="required" class="custom-control-input" value="">
-        <label for="radio_1" class="custom-control-label">Compra</label>
-      </div>
+    <div class="form-group row">
+        <label class="col-4">Tipo de Anuncio</label>
+        <div class="col-8">
+            <div class="custom-controls-stacked">
+                {% for subfield in form.annouce_type %}
+                <div class="custom-control custom-radio">
+                <tr>
+                    <td>{{ subfield }}</td>
+                    <td>{{ subfield.label }}</td>
+                </tr>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="form-group row">
-    <div class="offset-4 col-8">
-      <button name="submit" type="submit" class="btn btn-primary">Criar Anuncio</button>
-    </div>
-  </div>
+
+    <button type="submit" class="btn btn-primary">Criar Anuncio</button>
 </form>
   </div>
  </div>
