--- a/app/templates/announces.html
+++ b/app/templates/announces.html
@@ -4,41 +4,32 @@
 
 {% block content %}
 <table class="table table-striped table-sm ">
-  <thead>
+    <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">Usuario</th>
-      <th scope="col">Tipo Café</th>
-      <th scope="col">Tipo Anuncio</th>
-      <th scope="col">Quantidade Sacas</th>
-      <th scope="col">Data</th>
-      <th scope="col">Cidade</th>
+        <th scope="col">#</th>
+        <th scope="col">Usuario</th>
+        <th scope="col">Tipo Café</th>
+        <th scope="col">Tipo Anuncio</th>
+        <th scope="col">Quantidade Sacas</th>
+        <th scope="col">Data</th>
     </tr>
-  </thead>
-  <tbody>
+    </thead>
+    <tbody>
+    {% for l in all_lines %}
     <tr>
-      <th scope="row">1</th>
-      <td>Sit</td>
-      <td>Amet</td>
-      <td>Consectetur</td>
+        <th scope="row">1</th>
+        <td>{{l.post_username}}</td>
+        <td>{{l.post_coffe_type}}</td>
+        <td>{{l.post_type}}</td>
+        <td>{{l.post_qtd_sacas}}</td>
+        <td>{{l.post_date}}</td>
     </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Adipisicing</td>
-      <td>Elit</td>
-      <td>Sint</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Hic</td>
-      <td>Fugiat</td>
-      <td>Temporibus</td>
-    </tr>
-  </tbody>
+    {% endfor %}
 
-  <caption>
-    Captions of the table
-  </caption>
+
+    <caption>
+        Captions of the table
+    </caption>
 
 </table>
 {% endblock %}
