--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,8 +54,8 @@ html, body { height: 100%; margin: 0; }
           <ul class="dropdown-menu dropdown-menu-sm-end" aria-labelledby="navbarDropdown2">
           <li><a class="dropdown-item" href="#">Dashboard</a></li>
           <li><a class="dropdown-item" href="/new_annouce">Criar Anuncio</a></li>
-          <li><a class="dropdown-item" href="#">Meus Anuncios</a></li>
-          <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+          <li><a class="dropdown-item" href="/my_annouce">Meus Anuncios</a></li>
+          <li><a class="dropdown-item" href="/edit_profile">Edit Profile</a></li>
           <li><a class="dropdown-item" href="/logout">Log Out</a></li>
           </ul>
         </li>
