--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} {{ super() }} - Main {% endblock %}
+{% block title %} {{ super() }} - Edit {% endblock %}
 
 {% block content %}
 <div class="container rounded bg-white mt-5 mb-5">
@@ -9,6 +9,7 @@
             <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="{{ current_user.avatar(128) }}"><span class="font-weight-bold">{{user.username}}</span><span class="text-black-50">{{user.email}}</span><span> </span></div>
         </div>
         <div class="col-md-5 border-right">
+            <form action="" method="POST">
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h4 class="text-right">Edit profile</h4>
@@ -23,24 +24,13 @@
                 </div>
                 <div class="row mt-2">
                     <div class="col-md-6"><label class="labels">Password</label>{{form.password(class="form-control")}}</div>
-                    <div class="col-md-6"><label class="labels">Confirm Password</label>{{form.confirm(class="form-control")}}
-        {%if form.errors.confirm %}
-            <div class="alert alert-danger" role="alert">
-                <ul class="nav mb-lg-0">
-                    {% for e in form.errors.confirm%}
-                    <li>{{e}}</li>
-                    {% endfor %}
-                </ul>
-            </div>
-        {% endif %}</div>
+                    <div class="col-md-6"><label class="labels">Confirm Password</label>{{form.confirm(class="form-control")}}</div>
                 </div>
                 <div class="mt-5 text-center">{{form.submit(class="btn btn-primary")}}</div>
             </div>
-
+            </form>
         </div>
 
     </div>
-</div>
-</div>
 </div>
 {% endblock %}
