--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} {{ super() }} - Login {% endblock %}
+{% block title %} {{ super() }} - Register {% endblock %}
 
 {% block content %}
 <div class="container" style="margin: fill;">
