--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,17 +29,8 @@ html, body { height: 100%; margin: 0; }
         <li class="nav-item">
           <a class="nav-link" href="/announces">Anúncios</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Informações sobre café
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/infocafe/arabica_ruim">Arábica ruim</a></li>
-            <li><a class="dropdown-item" href="/infocafe/arabica_bom">Arábica boa</a></li>
-            <li><a class="dropdown-item" href="/infocafe/conillon">Conillon</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/infocafe/geral">Geral</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="/infocafe/geral">Informações sobre o café</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/sobreAPI">Nossa API</a>
