--- a/app/templates/graph.html
+++ b/app/templates/graph.html
@@ -7,6 +7,46 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js'></script>
 
 
+<img class="bd-placeholder-img" style="object-fit: cover; object-position: 50% 55%; filter: brightness(70%);"
+     width="100%" height="100%" src="https://cdn.pixabay.com/photo/2016/07/28/18/30/coffee-farm-1548771_960_720.jpg">
+
+<div class="container">
+    <div class="carousel-caption" style="font-size: large; bottom: 8%; z-index: 10;">
+
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="row">
+                        <h2>Arabica Boa</h2>
+                        <a style="font-size:3vw">R$ 40</a>
+                    </div>
+                    <div class="row">
+                        <h2>Arabica Ruim</h2>
+                        <a style="font-size:3vw">R$ 40</a>
+                    </div>
+                    <div class="row">
+                        <h2>Arabica Conillon</h2>
+                        <a style="font-size:3vw">R$ 40</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <h2>Previsão do Tempo</h2>
+                        <iframe src="https://www.meteoblue.com/pt/tempo/widget/daily?geoloc=detect&days=2&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&precipunit=MILLIMETER&coloured=coloured&pictoicon=0&pictoicon=1&maxtemperature=0&maxtemperature=1&mintemperature=0&mintemperature=1&windspeed=0&windgust=0&winddirection=0&uv=0&humidity=0&precipitation=0&precipitation=1&precipitationprobability=0&precipitationprobability=1&spot=0&pressure=0&layout=dark"
+                                frameborder="0" scrolling="NO" allowtransparency="true"
+                                sandbox="allow-same-origin allow-scripts allow-popups allow-popups-to-escape-sandbox"
+                                style="width: 108px; height: 300px;margin: auto;"></iframe>
+                        <div><!-- DO NOT REMOVE THIS LINK --><a
+                                href="https://www.meteoblue.com/pt/tempo/semana/index?utm_source=weather_widget&utm_medium=linkus&utm_content=daily&utm_campaign=Weather%2BWidget"
+                                target="_blank">meteoblue</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 <canvas id="myChart"></canvas>
 <script>
     let labels = [{% for item in labels %}
