Verificação de telefone

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -39,7 +39,7 @@
     </div>
     <div class="mb-3">
         <label  class="form-label">Telefone</label>
-            {{form.phone(class="form-control")}}
+            {{form.phone(class="form-control", placeholder="+55 027")}}
     </div>
 
     <div class="col-12">
